fixed issue with text overflow in style guide

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ body{
     margin: 0;
     background-color: #FFFAFA;
     overflow-x: hidden;
+    overflow-wrap: break-word;
 }
 
 pre {
